[CacheStorage] Don't call GetUsageAndQuota from a scheduled operation

Scheduled operations run sequentially. GetUsageAndQuota() can sometimes create
a new Size() scheduled operation, so calling it while in a scheduled operation
can result in a hung CacheStorage. This CL moves the calls to GetUsageAndQuota
to just before the operations are scheduled. This means that the size estimate
is less accurate, as it's determined potentially well before the operation runs.

BUG=620713

Review-Url: https://codereview.chromium.org/2085583002
Cr-Commit-Position: refs/heads/master@{#401001}

Former-commit-id: 36dc82c2b7539b33b63cb6f967feae265625d178